Added a cursor pointer hover thing

--- a/src/App/ui/Footer/Footer.scss
+++ b/src/App/ui/Footer/Footer.scss
@@ -1,4 +1,7 @@
 .footer{
-  height: 25vh;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  height: 15vh;
   background-color: gray;
+  text-align: center;
 }
