--- a/src/App/ui/Image/Image.scss
+++ b/src/App/ui/Image/Image.scss
@@ -1,8 +1,8 @@
 .image{
   position: relative;
   transform: translate(-50%, 50%);
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   left: 50%;
   border-radius: 50%;
   border-style: solid;
@@ -10,4 +10,30 @@
   border-color: gray;
   box-shadow: 2px 2px 20px gray;
   background-color: whitesmoke;
+}
+
+.image:hover{
+  cursor: pointer;
+}
+
+.smallImage{
+  height: 85%;
+  max-height: 100px;
+  width: auto;
+  left: 50%;
+  border-radius: 15%;
+  border-style: solid;
+  border-width: 5px;
+  border-color: whitesmoke;
+  background-color: whitesmoke;
+}
+
+.imageContainer{
+  display: inline;
+  margin: auto;
+  margin-left: 10px;
+}
+
+.smallImage:hover{
+  cursor: pointer;
 }
