Added state to the header and fixed the footer

--- a/src/App/ui/Footer/Footer.scss
+++ b/src/App/ui/Footer/Footer.scss
@@ -1,7 +1,5 @@
 .footer{
-  padding-top: 13px;
-  padding-bottom: 13px;
-  height: 15vh;
+  height: auto;
   background-color: gray;
   text-align: center;
 }
