Added the exerpeience section

--- a/src/App/routes/Experience/Experience.scss
+++ b/src/App/routes/Experience/Experience.scss
@@ -1,4 +1,13 @@
 .container{
-  height: 85vh;
+  padding-top: 150px;
+  padding-bottom: 50px;
+  height: auto;
+  width: 100%;
   background-color: whitesmoke;
+}
+
+.experienceContainer{
+  width: 95%;
+  max-width: 700px;
+  margin: 0 auto;
 }
