Added projects tab, removed projects from footer, also made some adjustments and prepared for the slideshow feature

--- a/src/App/routes/About/About.scss
+++ b/src/App/routes/About/About.scss
@@ -2,7 +2,7 @@
 
 .container{
   padding-top: 150px;
-  min-height: 85vh;
+  min-height: 650px;
   height: 100%;
   background-color: whitesmoke;
 
@@ -16,12 +16,18 @@
   border-width: 3px;
   border-color: lightgray;
   margin: 0 auto;
-  display: block;
+  display: inline;
   transform: translate(0px, 100px);
   animation: imageMove 400ms linear;
   animation-delay: 600ms;
   animation-fill-mode: forwards;
   transition-property: transform;
+}
+
+.mainImageContainer{
+  width: 300px;
+  height: auto;
+  margin: 0 auto;
 }
 
 .about{
@@ -47,26 +53,26 @@
   animation-name: textAppear;
 }
 .imagesButton{
+  visibility: hidden;
   display: inline;
-  height: 40px;
-  width: 40px;
+  height: 20px;
+  width: 20px;
   border-radius: 5px;
   background-color: white;
   outline: none;
   border: none;
+  animation-name: showButton;
+  animation-delay: 1000ms;
+  animation-fill-mode: forwards;
 }
+
 .imagesButton:hover{
   cursor:pointer;
 }
 
-.imagesButton:active{
-  animation-name: buttonPress;
-  animation-duration: 1500ms;
-}
-
 .images{
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
 }
 
 .toolTip{
@@ -75,7 +81,7 @@
 
 button:hover > .toolTip {
   position: absolute;
-  transform: translate(60px, 0px);
+  transform: translate(25px, -50px);
   display: block;
 }
 
@@ -137,13 +143,11 @@ button:hover > .toolTip {
   }
 }
 
-@keyframes buttonPress {
-  from {
-    background-color: yellow;
-    clip-path: circle(0% at 50% 50%);
+@keyframes showButton {
+  from{
+    visibility: hidden;
   }
-  to {
-    background-color: yellow;
-    clip-path: circle(100% at 50% 50%);
+  to{
+    visibility: visible;
   }
 }
