--- a/src/App/ui/City/City.scss
+++ b/src/App/ui/City/City.scss
@@ -1,9 +1,8 @@
 .container{
   background-image: url('../../../assets/background.jpg');
-  background-size: cover;                      /* <------ */
+  background-size: cover;
   background-repeat: no-repeat;
   height: 85vh;
-  min-height: 500px;
 }
 
 .text{
