Added a default page for the slideshow to come

--- a/src/App/routes/ImageSlideShow/ImageSlideShow.scss
+++ b/src/App/routes/ImageSlideShow/ImageSlideShow.scss
@@ -6,3 +6,16 @@
   width: 100%;
   background-color: whitesmoke;
 }
+
+.innerContainer{
+  padding-top: 125px;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 32px;
+  margin: 0 auto;
+  width: 600px;
+  height: 200px;
+  border-radius: 15px;
+
+  background-color: white;
+}
