--- a/src/App/routes/ImageSlideShow/ImageSlideShow.scss
+++ b/src/App/routes/ImageSlideShow/ImageSlideShow.scss
@@ -1,21 +1,13 @@
 .imageSlideShowContainer{
-  padding-top: 150px;
-  padding-bottom: 50px;
-  height: auto;
+  height: 100%;
   min-height: 65vh;
   width: 100%;
   background-color: whitesmoke;
+
 }
 
-.innerContainer{
-  padding-top: 125px;
-  vertical-align: middle;
-  text-align: center;
-  font-size: 32px;
-  margin: 0 auto;
-  width: 600px;
-  height: 200px;
-  border-radius: 15px;
-
-  background-color: white;
+.column{
+  display: inline-block;
+  height: 90vh;
+  width: 25%;
 }
