Added skills and also a dropdown that is not active yet

--- a/src/App/routes/ImageSlideShow/ImageSlideShow.scss
+++ b/src/App/routes/ImageSlideShow/ImageSlideShow.scss
@@ -3,11 +3,14 @@
   min-height: 65vh;
   width: 100%;
   background-color: whitesmoke;
+  display: flex;
+  flex-direction: row;
 
 }
 
 .column{
-  display: inline-block;
+  background-color: yellow;
+  top: 0px;
   height: 90vh;
   width: 25%;
 }
