--- a/src/App/ui/SlideShowImage/SlideShowImage.scss
+++ b/src/App/ui/SlideShowImage/SlideShowImage.scss
@@ -1,3 +1,5 @@
+//TODO: Make a new animation just for image, so image container should have an image as well asi mage
+
 .cardContainer{
   box-shadow: 1px 1px 10px lightgray;
   border-radius: 2px;
@@ -6,7 +8,7 @@
 .largeSlideShowImageContainer{
   height: 475px;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
   background-color: white;
   animation-duration: 10000ms;
   text-wrap: normal;
@@ -15,22 +17,26 @@
 .image{
   width: 100%;
   height: auto;
+  animation-name: startImage;
+  animation-duration: 10000ms;
 }
 
 .mediumSlideShowImageContainer{
-  height: 300px;
+  height: auto;
   width: 60%;
-  margin: auto;
+  margin: 0 auto;
   background-color: white;
-  text-wrap: normal;
   animation-duration: 10000ms;
   font-size: 11px;
+  animation-name: startImage;
+  animation-duration: 10000ms;
+
 }
 
 .smallSlideShowImageContainer{
   height: 200px;
   width: 40%;
-  margin: auto;
+  margin: 0 auto;
   text-wrap: normal;
   background-color: white;
   animation-duration: 10000ms;
@@ -38,12 +44,8 @@
 }
 
 .cardFooter{
-  padding: 10px;
-  margin-top: 3%;
-  width: 100%;
+  padding: 5%;
 }
-
-
 
 .animationContainer{
   height: 300px;
@@ -56,7 +58,6 @@
   100%{
     height: 100%;
   }
-
 }
 
 @keyframes endImage {
@@ -66,5 +67,4 @@
   100%{
     height: 0%;
   }
-
 }
