Fixed the margin issue for small screens on the about section

--- a/src/App/routes/About/About.scss
+++ b/src/App/routes/About/About.scss
@@ -113,6 +113,12 @@ button:hover > .toolTip {
   background-color: white;
 }
 
+@media screen and (max-width: 400px){
+  .container{
+    padding-top: 225px;
+  }
+}
+
 @keyframes aboutDrop {
   from{
     height: 0px;
