--- a/src/App/ui/containers/Header/Header.scss
+++ b/src/App/ui/containers/Header/Header.scss
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100%;
   z-index: 0;
-  height: 100px;
+  height: auto;
   background-color: lightgray;
   box-shadow: 0 2px 15px #C2B7F8;
 
