--- a/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
+++ b/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
@@ -1,13 +1,14 @@
 .container {
-  width: 100%;
+  width: 90%;
   max-width: 600px;
   height: auto;
   background-color: white;
-  display: flex;
-  flex-direction: row;
   border-radius: 10px;
   padding: 20px;
   margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .image{
@@ -30,9 +31,19 @@
 
 .textContainer {
   padding: 60px;
+  width: 50%;
 }
 
 .url {
   margin-top: 10px;
   float: right;
+}
+
+@media screen and (max-width: 660px) {
+  .textContainer{
+    width: 100%;
+  }
+  .image{
+    margin: auto;
+  }
 }
