--- a/src/App/ui/Layout/Layout.scss
+++ b/src/App/ui/Layout/Layout.scss
@@ -12,3 +12,9 @@
   max-width: 700px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 510px) {
+  .container{
+    padding-top: 225px;
+  }
+}
