--- a/src/App/ui/containers/MainImage/MainImage.scss
+++ b/src/App/ui/containers/MainImage/MainImage.scss
@@ -35,6 +35,12 @@
   animation-duration: 300ms;
 }
 
+@media screen and (max-width: 510px) {
+  .imageContainer{
+    display: none;
+  }
+}
+
 @keyframes transition {
   from {
     opacity: 0;
