ADded git api support

--- a/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
+++ b/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
@@ -21,6 +21,25 @@
   border-color: whitesmoke;
 }
 
+.extraContainer{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.extraTitle{
+  font-size: 20px;
+  color: gray;
+}
+
+.extraDate{
+  color: lightgray;
+}
+
+.extraDescription{
+  color: #C2B7F8;
+  font-style: italic;
+}
+
 .title{
   font-size: 22px;
 }
